Delete NestedSet.toCollection in favor of toList.
toCollection was just calling toList and disguising the return type. Migrated callers to use ImmutableList type so it's obvious that the returned list is not a mutable collection.

RELNOTES: None.
PiperOrigin-RevId: 246896175